--- a/html/universal_robots.html
+++ b/html/universal_robots.html
@@ -14,15 +14,15 @@
             <a href="./modelos_ur.html">Modelos UR</a>
             <a href="./index.html"></a>
         </nav>
-    </header>
+    </header><br>
     <main>
+        <div class="logo_UR"><img src="../img/Logo_UR.jpg" alt="">
+        <small>Logo de: <a href="https://www.universal-robots.com/br/">Universal Robots</a></small>
+        </div>
         <h1>Universal Robots</h1>
         <p>A Universal Robots é uma empresa especializada no desenvolvimento e na criação de robôs da mais alta tecnologia, especializados na produção e automação de forma mais simples e segura para a melhor produção, além do maior acesso à robótica nas empresas nos dias de hoje. </p>
         <p>A empresa também possui sua própria linguagem de programação, o URScript, porém os seus robôs também aceitam linguagens comuns, como o C++ e o Python</p>
-        <div>
-            <img src="../img/URScript.jpg" alt="">
-            <small>Adaptada de: <a href="https://www.hirebotics.com/">Hirebotics</a></small>
-        </div>
+
 
     </main>
     <footer>
