--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <main>
         <H1>UR3e</H1>
         <p>Ur3e, robô projetado pela empresa <a class="UR" href="./html/universal_robots.html">Universal Robots</a> é um modelo de robô colaborativo, ou seja, ele trabalha de forma integradaao lado de humanos em ambientes industriais , tendo como objetivo aumentar a produção e a redução dos trabalhos de força.</p>
-        <div>
+        <div class="robo_colaborativo">
             <img src="img/robo_colaborativo.jpg" alt="">
             <small>Adaptada de: <a href="https://epl-si.com/">EPL</a></small>
         </div><br>
         <p>Este robô é uma versão compacta de uma série de robôs, usado principalmente para ambientes de espaço limitado, por conta de ser um robô de pequeno porte, e também tendo sua carga e alcance limitados chegando a 50cm e carregando apenas 3kg, mas ainda sim vem trazendo uma ótima qualidade e desempenho, conseguindo fazer tarefas complexas e delicadas.</p>
-        <div>
+        <div class="robo_ur">
             <img src="img/UR3e.webp" alt="">
             <small>Imagem de: <a href="https://www.universal-robots.com/br/">Universal Robots</a></small>
         </div>
