--- a/html/modelos_ur.html
+++ b/html/modelos_ur.html
@@ -18,6 +18,10 @@
     <main>
         <h1>Modelos UR</h1>
         <P>A marca possui diversas variedades de cobots, que são os robos colaborativos. Sua principal funcão é ser utilizado para trabalhar junto com pessoas  eles são robôs de alto nível de segurança e desempenho,Tendo diversos modelos com diversas características para melhor funcionamento nas empresas, algumas das principais diferenças entre os modelos são coisas como formas, tamanho e níveis de alcance.</P>
+        <div class="modelos_ur">
+            <img src="../img/Modelo_UR.jpg" alt="">
+            <small>Adaptado de: <a href="https://www.turbosquid.com/">Turbo Squid</a></small>
+        </div>
     </main>
     <footer>
         <small>By Miguel &copy; &trade;</small>
