--- a/html/modelos_ur.html
+++ b/html/modelos_ur.html
@@ -16,16 +16,17 @@
         </nav>
     </header>
     <main>
-        <h1>Modelos UR</h1>
-        <P>A marca possui diversas variedades de cobots, que são os robos colaborativos. Sua principal funcão é ser utilizado para trabalhar junto com pessoas  eles são robôs de alto nível de segurança e desempenho,Tendo diversos modelos com diversas características para melhor funcionamento nas empresas, algumas das principais diferenças entre os modelos são coisas como formas, tamanho e níveis de alcance.</P>
+        <h1>Modelos UR</h1><br>
+        <P>A marca possui diversas variedades de cobots, que são os robos colaborativos. Sua principal funcão é ser utilizado para trabalhar junto com pessoas  eles são robôs de alto nível de segurança e desempenho,Tendo diversos modelos com diversas características para melhor funcionamento nas empresas, algumas das principais diferenças entre os modelos são coisas como formas, tamanho e níveis de alcance.</P><br>
         <div class="modelos_ur">
-            <img src="../img/Modelo_UR.jpg" alt="">
+            <img src="../img/Modelo_UR.jpg" alt=""><br>
             <small>Adaptado de: <a href="https://www.turbosquid.com/">Turbo Squid</a></small>
+            <br>
         </div>
         <div class="video_robo">
-            <iframe width="360" height="360" src="https://www.youtube.com/embed/35KhfiAmE4o?si=GKFcOFHJKF-0ya0d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="360" height="360" src="https://www.youtube.com/embed/35KhfiAmE4o?si=GKFcOFHJKF-0ya0d" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
             <small>Video de: <a href="https://youtube.com/@thesempregroup?feature=shared">The Sempre Group (Canal do Youtube)</a></small>
-        </div>
+        </div><br>
     </main>
     <footer>
         <small>By Miguel &copy; &trade;</small>
