--- a/index.html
+++ b/index.html
@@ -20,14 +20,17 @@
         <H1>UR3e</H1>
         <p>Ur3e, robô projetado pela empresa <a class="UR" href="./html/universal_robots.html">Universal Robots</a> é um modelo de robô colaborativo, ou seja, ele trabalha de forma integrada ao lado de humanos em ambientes industriais , tendo como objetivo aumentar a produção e a redução dos trabalhos de força.</p>
         <div class="robo_colaborativo">
-            <img src="img/robo_colaborativo.jpg" alt="">
+            <img src="img/robo_colaborativo.jpg" alt=""><br>
             <small>Adaptada de: <a href="https://epl-si.com/">EPL</a></small>
         </div><br>
         <p>Este robô é uma versão compacta de uma série de robôs, usado principalmente para ambientes de espaço limitado, por conta de ser um robô de pequeno porte, e também tendo sua carga e alcance limitados chegando a 50cm e carregando apenas 3kg, mas ainda sim vem trazendo uma ótima qualidade e desempenho, conseguindo fazer tarefas complexas e delicadas.</p>
         <div class="robo_ur">
-            <img src="img/UR3e.webp" alt="">
+            <img src="img/UR3e.webp" alt=""><br>
             <small>Imagem de: <a href="https://www.universal-robots.com/br/">Universal Robots</a></small>
         </div>
+        <h1>Características</h1>
+        <p>O robô UR3e foi pensado para ser um robô para ambientes menores como bancadas, para linhas de laboratório ou montagens eletrônicas. Ele possui um formato pensado para maior segurança e manuseio das pessoas que utilizam ele, facilitando a programação do mesmo.Ele está em uma linha de produção de robôs chamada e-series, que são robôs pensados com sensores de força e torque integrados, ele tem uma vida útil grande e não possui necessidade de manutenção constante, além de poder produzir coisas  com movimento repetitivo sem danificar o robô.
+        </p><br>
     </main>
     <footer>
         <small>By Miguel &copy; &trade;</small>
